<resources>
    <string name="app_name">LoginSQLiteCRUD</string>
    <string name="welcome">Bem vindo!</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="goto_register">Registar</string>
    <string name="do_cancel">Cancelar</string>
    <string name="do_login">Entrar</string>
    <string name="do_logout">Logout</string>
    <string name="do_minimize">Minimizar</string>
    <string name="do_register">Registar</string>
    <string name="do_exit">Sair</string>
    <string name="login_failure">Credenciais incorretas!</string>
    <string name="login_success">Login com sucesso!</string>
    <string name="insert">Inserir Estudante</string>
    <string name="read">Ler</string>
    <string name="delete">Apagar</string>
    <string name="update">Gravar</string>
    <string name="go_back">Voltar</string>
    <string name="number_short">Nr.</string>
    <string name="number">Número</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="register_error_1">O username e email introduzidos  já estão registados</string>
    <string name="register_error_2">O username introduzido já está registado</string>
    <string name="register_error_3">O email introduzido já está registado</string>
    <string name="register_error_4">O username tem que possuir no mínimo 4 caracteres</string>
    <string name="register_error_5">A password tem que conter no mínimo 9 caracteres</string>
    <string name="register_error_6">O e-email tem que ter no mínimo 6 caracteres</string>
    <string name="register_rules_title">Regras:</string>
    <string name="register_success">Utilizador inserido!</string>
    <string name="register_failure">Erro ao inserir o utilizador!</string>
    <string name="main_greetings">Bem vindo ao menu principal!</string>
    <string name="edit_success">Informação atualizada com sucesso!</string>
    <string name="edit_failure">Erro na actualização do Estudante!</string>
    <string name="edit_resume_title">Resumo:</string>
    <string name="delete_success">Estudante eliminado com sucesso!</string>
    <string name="delete_failure">Calma! Já eliminou o Estudante.</string>
    <string name="edit_error_1">O número de aluno tem que ser superior a 0</string>
    <string name="edit_error_2">O nome do aluno tem que ter no mínimo 3 letras</string>
    <string name="edit_error_3">O aluno tem que ter uma idade igual ou superior a 5 anos</string>
    <string name="edit_error_4">O número de telefone têm que ter entre 9 e 14 caracteres</string>
    <string name="edit_error_5">O endereço de e-mail tem que possuir pelo menos 6 caracteres</string>
    <string name="edit_error_6">Tem que preencher os campos número e a idade com números</string>
    <string name="insert_failure">Este número de Estudante já está ocupado</string>
    <string name="insert_success">Estudante adicionado com sucesso!</string>

</resources>
