<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listViewStudent"
        android:layout_width="wrap_content"
        android:layout_height="430dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonInsertStudent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/buttonInsertStudent"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="20dp"
        android:onClick="insertStudentButtonClicked"
        android:text="@string/insert"
        app:layout_constraintBottom_toTopOf="@+id/do_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/do_logout"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="36dp"
        android:onClick="returnButtonClicked"
        android:text="@string/do_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/number_short"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="44dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/name"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/listViewStudent"
        app:layout_constraintEnd_toStartOf="@+id/textViewPhone"
        app:layout_constraintStart_toEndOf="@+id/textViewNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text="@string/phone"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>